discussion/kv_engine/177003/177003_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

[Refactor] rename serverless_test to metering_test

Change-Id: I79828a48fd181e89033a7fe1227b31f2071b9f45

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2022-07-03 07:44:11.000000000
Message: 
Uploaded patch set 2: Patch Set 1 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-07-03 08:00:27.000000000
Message: 
Patch Set 2: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/47289/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/47289/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/8195/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/8195/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/21396/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/21396/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/20408/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/20408/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/8294/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/8294/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/20756/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/20756/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/28789/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/28789/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/19630/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/19630/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18524/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/metering_test.cc:32:17: error: use of undeclared identifier "cluster" [clang-diagnostic-error]
    auto conn = cluster->getConnection(0);
                ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/metering_test.cc:68:18: error: use of undeclared identifier "cluster" [clang-diagnostic-error]
    auto admin = cluster->getConnection(0);
                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/metering_test.cc:382:18: error: use of undeclared identifier "cluster" [clang-diagnostic-error]
    auto admin = cluster->getConnection(0);
                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/metering_test.cc:923:23: error: use of undeclared identifier "cluster" [clang-diagnostic-error]
    auto connection = cluster->getConnection(0);
                      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/metering_test.cc:974:18: error: use of undeclared identifier "cluster" [clang-diagnostic-error]
    auto admin = cluster->getConnection(0);
                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/metering_test.cc:1035:18: error: use of undeclared identifier "cluster" [clang-diagnostic-error]
    auto admin = cluster->getConnection(0);
                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/metering_test.cc:1155:18: error: use of undeclared identifier "cluster" [clang-diagnostic-error]
    auto admin = cluster->getConnection(0);
                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/metering_test.cc:1215:17: error: use of undeclared identifier "cluster" [clang-diagnostic-error]
    auto conn = cluster->getConnection(0);
                ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/metering_test.cc:1221:19: error: use of undeclared identifier "cluster" [clang-diagnostic-error]
    auto bucket = cluster->getBucket("metering");
                  ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/metering_test.cc:1305:17: error: use of undeclared identifier "cluster" [clang-diagnostic-error]
    auto conn = cluster->getConnection(0);
                ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/metering_test.cc:1339:17: error: use of undeclared identifier "cluster" [clang-diagnostic-error]
    auto conn = cluster->getConnection(0);
                ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/metering_test.cc:1388:17: error: use of undeclared identifier "cluster" [clang-diagnostic-error]
    auto conn = cluster->getConnection(0);
                ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/serverless_test.h:15:11: error: unknown type name "size_t" [clang-diagnostic-error]
constexpr size_t MaxConnectionsPerBucket = 16;
          ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/serverless_test.h:23:8: error: use of undeclared identifier "std" [clang-diagnostic-error]
extern std::unique_ptr<cb::test::Cluster> cluster;
       ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18524/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/metering_test.cc:32:17:
error: use of undeclared identifier "cluster" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18524/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/17677/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/39736/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
